--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="hideOnMobile"><a href="#home">HOME</a></li>
         <li class="hideOnMobile"><a href="#about">ABOUT</a></li>
         <li class="hideOnMobile"><a href="#skills">SKILLS</a></li>
-        <!-- <li><a href="#"></a></li> -->
+        <li class="hideOnMobile"><a href="project.html">PROJECTS</a></li>
         <li class="hideOnMobile"><button class="btn"><a href="#contact">CONTACT ME</a></button></li>
       </ul>
       <a href="#" onclick=showSidebar() class="showOnMobile"><img src="menu_35dp_FFFFFF_FILL1_wght400_GRAD0_opsz40.svg" alt=""></a>
