--- a/project.html
+++ b/project.html
@@ -114,9 +114,9 @@
       A beautifully designed website for a café, created as a group project in college. It includes a homepage, menu, reservation section, and order form — giving a full user-friendly experience.
     </div>
     <div class="project-gallery">
-      <img src="images/cafe-home.png" alt="Cafe Homepage">
-      <img src="images/cafe-menu.png" alt="Menu Page">
-      <img src="images/about us.png" alt="AboutUs Page">
+      <img src="cafe-home.png" alt="Cafe Homepage">
+      <img src="cafe-menu.png" alt="Menu Page">
+      <img src="about us.png" alt="AboutUs Page">
     </div><br><br>
     
     <div class="tech-stack"><strong>Tech Stack:</strong> HTML, CSS, JavaScript</div>
