--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a href="#home">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#skills">SKILLS</a></li>
-        <li><a href="#"></a></li> 
+        <li><a href="project.html">PROJECTS</a></li> 
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
